# PhaMers

./: CMakeLists.txt  LICENSE.txt  README.md  requirements.txt  run.sh  setup.py  submit.sh  submit_bijah.sh  submit_lgb.sh
data/reference_features/: negative_features.csv  positive_features.csv
include/: thread-pool.h
lib/: img_parser.py  kmer.py  makefile  taxonomy.py
outputs/cross_validation/: metrics.txt  scores.txt
outputs/taxonomy/: cluster_taxonomy.txt  tsne_data.csv
scripts/: analysis.py  basic.py  blast_contig.py  cluster.py  cross_validate.py  cut_validator.py  distinguishable_colors.py  feature_taxonomy.py  fileIO.py  id_parser.py  img_parser.py  kmer.py  kmers.cpp  learning.py  makefile  phage_taxonomy.py  phage_taxonomy.py~  phamer.py  post_analysis.py  run.sh  run.sh~  taxonomy.py  test_prophage.py  transform_kmers.py  tsne.py
src/: fileIO.py  id_parser.py  kmer-counter.cpp  kmer.py  kmers.cpp  kmers.h  makefile  test.py
submit/: kmer.py  phamer.py
test/: test.kmer  test.py
test/test_data/: empty.kmer  test.fasta
validation/: cluster.py  cut_validator.py  feature_taxonomy.py
